testsuite/tests/rename/should_fail/T25901_sub_d.stderr
T25901_sub_d.hs:14:16: error: [GHC-76037]
    Not in scope: type constructor or class ‘#’

